NO-TASK: feat: Update

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,4 +3,4 @@
             entry: ./config/git/prepare-commit-msg
             name: Prepare commit messages
             description: Prepare commit messages
-            language: python
+            language: script
