--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,9 @@
+-   repo: local
     hooks:
-        -   id: prepare-commit-msg
-            entry: ./config/git/prepare-commit-msg
-            name: Prepare commit messages
-            description: Prepare commit messages
-            language: script
+    -   id: prepare-commit-msg
+        entry: ./config/git/prepare-commit-msg
+        name: Prepare commit messages
+        description: Prepare commit messages
+        language: script
 
             
